--- a/src/app/basicForm/basicForm.component.html
+++ b/src/app/basicForm/basicForm.component.html
@@ -1,18 +1,41 @@
 <div class="container">
     <div *ngIf="!submitted">
         <h1> Basic templte driven form</h1>
-        <form #heroForm="ngForm" (ngSubmit) = onSubmit(heroForm.value)>
-            
+        <form #heroForm="ngForm" (ngSubmit)="onSubmit(heroForm.value)">
             <div class="form-group">
                 <label>Name</label>
-                <input type="text" name="FirstName" ngModel #firstName="ngModel" required/>
-                <div class="alert alert-danger" [hidden]="firstName.valid || firstName.pristine" > Name field is mandatory</div>
+                <input type="text" class="form-control" name="FirstName" ngModel #firstName="ngModel" required/>
+                <div class="alert alert-danger" [hidden]="firstName.valid || firstName.pristine"> Name field is mandatory</div>
             </div>
-            <button type="submit" class="btn btn-default" [disabled] ="!heroForm.valid">Submit</button> 
+            <div class="form-group">
+                <label for="alterEgo">Alter Ego</label>
+                <input type="text" class="form-control" name="alterEgo" ngModel #alterEgo="ngModel" required/>
+                <div class="alert alert-danger" [hidden]="alterEgo.valid || alterEgo.pristine">Alter Ego is required</div>
+            </div>
+            <div class="form-group">
+                <label for="power">Hero Power</label>
+                <select class="form-control" name="power" ngModel #power="ngModel" required>
+                    <option *ngFor="let p of powers" [value]="p" >{{p}}</option>
+                </select>
+                <div class="alert alert-danger" [hidden]="power.valid || power.pristine">Power is required</div>
+            </div>
+            <button type="submit" class="btn btn-default" [disabled]="!heroForm.valid">Submit</button>
         </form>
     </div>
     <div *ngIf="submitted">
-        Raw out put of form value
-        {{ form | json}}
+        <h2>You submitted the following:</h2>
+        <div class="row">
+            <div class="col-md-2">Name</div>
+            <div class="col-md-10 pull-left">{{ form.FirstName }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">Alter Ego</div>
+            <div class="col-md-10 pull-left">{{ form.alterEgo }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">Power</div>
+            <div class="col-md-10 pull-left">{{ form.power }}</div>
+        </div>
+        <br /> {{ form | json}}
     </div>
 </div>
